 /* $Id: changelog,v 1.704 2000-02-06 22:01:32 sandervl Exp $ */

 2000-02-06: Jens Wiessner <wiessnej@rfi.de>
	- WINMM: Updated MCI dlls (added version info)

 2000-02-06: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Changed GetProcessDword ordinal to 18
	- USER32: Temporarily commented out shellposition changes
                  (breaks i.e. calc & Notes)
                  Started rewriting BeginPaint/EndPaint + DC apis

 2000-02-06: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: ported WinHelpA from WINE

 2000-02-05: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: WM_SETHOTKEY: save data
		  prototype for WS_EX_CONTEXTHELP button
		  check WS_EX_RIGHT in button control
		  fixed tasklist entry
		  implemented CW_USEDEFAULT with FCF_SHELLPOSITION

 2000-02-05: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Memory map fixes (file maps)
	- USER32: mdi child creation fix (child still not activated when created)
                  Default WM_ERASEBKGND handler change (only erase invalid area)
                  (note: might be wrong; have to check this in NT; probably
                         need to rewrite code that sends those messages)
                  -> fixes redraws for i.e. windows behind menu windows
	- GDI32: Don't use Open32 apis to load opengl32 (nor for GetProcAddress)
                 Import wgl* apis
	- OPENGL: Removed OS2wgl apis (they had the wrong calling convention
                  -> causes crashes in gdi32 when compiled with optimizations on)

 2000-02-04: Markus Montkowski <mmontkowski@gmx.de> 
        - DDRAW:  Many minor/major bugfixes at numerous places
        - DSOUND: Fixed GetCurrentBufferPos in the virtual player 

 2000-02-04: Sander van Leeuwen <sandervl@xs4all.nl>
	- ALL: Added version resource (if not already present)
               Link with dllentry.obj (those dlls that don't need custom dll
               entrypoints)
               Clean up in process detach handler of win32 libmain